--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
